fix(slideout) aciton button layout bug

--- a/views/assets/stylesheets/scss/qor/qor-slideout.scss
+++ b/views/assets/stylesheets/scss/qor/qor-slideout.scss
@@ -83,7 +83,8 @@
     }
   }
   .qor-page__header{
-    position: static;
+    position: relative;
+    top: inherit;
     width: calc(100% + 48px);
     + .qor-page__body{
       padding-top: 0;
